--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongodb": "^4.12.1",
-    "mustache": "^4.2.0",
+    "mustache": "^4.2.0"
     "properties-reader": "^2.3.0"
   },
   "version": "1.0.0",
